# advent_of_code_2025

./: .gitignore  Makefile  README.md  pyproject.toml
day1/: solution.py
day1/tests/: test_solution.py
day2/: solution.py
