[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Repo with my advent of code solutions 2025"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Medallion", email = "nickcar13@gmail.com"}]
dependencies = []


