[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[project]
name = "advent_of_code_2025"
version = "0.1.0"
description = "Repo with my advent of code solutions 2025"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Medallion", email = "nickcar13@gmail.com"}]
dependencies = []


[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)"
]
